syntax = "proto3"; //指定版本，必须要写（proto3、proto2）
//import "google/protobuf/any.proto";

//生成类的类名
option java_outer_classname = "MessageClass";

message Message{

string id=1;//消息唯一ID

string serverId=2;//服务器Id

int32 reqType=3;// 请求类型

int64 msgTime=4;//消息时间

int32 syn=5;//同步标志，标记消息在传输哪个阶段

//--------------------ack-------------------

string ack=6;//ack

//-------------------user-------------------

string fromId=7;// 发送用户ID

string toId=8;//接收用户ID

string groupId=9;//群id


//------------------------------------------

string body=10;//消息体


//-----------------status---------------------


int32 status=11;//状态









}
